Launched activity that display a joke passed to it as an intent extra

--- a/jokedisplay/src/main/res/values/strings.xml
+++ b/jokedisplay/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">JokeDisplay</string>
+
+    <string name="display_joke">Displaying a funny joke here.</string>
 </resources>
